--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -32,12 +32,10 @@
 		 		"imports": {
 			 		"three":                "https://unpkg.com/three@0.142.0/build/three.module.js",
 					"three/examples/":		"https://unpkg.com/three@0.142.0/examples/",
-					"three-subdivide": 		"/src/index.js"
+					"three-subdivide": 		"https://unpkg.com/three-subdivide@1.0.0/build/index.module.js"
 		 		}
 	 		}
  		</script>
-
-		<!-- 		"three-subdivide": 		"https://unpkg.com/three-subdivide@^1.0.0/build/index.module.js" -->
 
 		<!-- //////////////////////////////////////////////////////////////////////////// -->
 
