--- a/three-example/webgl_modifier_subdivision.html
+++ b/three-example/webgl_modifier_subdivision.html
@@ -24,7 +24,7 @@
 				"imports": {
 					"three": "../build/three.module.js",
 					"three/examples/": "./",
-					"three-subdivide": "https://unpkg.com/three-subdivide@^1.0.0/build/index.module.js"
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.1/build/index.module.js"
 				}
 			}
 		</script>
