--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -32,7 +32,7 @@
 		 		"imports": {
 			 		"three":                "https://unpkg.com/three@0.142.0/build/three.module.js",
 					"three/examples/":		"https://unpkg.com/three@0.142.0/examples/",
-					"three-subdivide": 		"https://unpkg.com/three-subdivide@1.0.1/build/index.module.js"
+					"three-subdivide": 		"https://unpkg.com/three-subdivide/build/index.module.js"
 		 		}
 	 		}
  		</script>
