--- a/three-example/webgl_modifier_subdivision.html
+++ b/three-example/webgl_modifier_subdivision.html
@@ -21,7 +21,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-subdivide": "https://unpkg.com/three-subdivide@^1.0.2/build/index.module.js"
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.2/build/index.module.js"
 				}
 			}
 		</script>
