--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -32,7 +32,7 @@
 		 		"imports": {
 			 		"three": "https://unpkg.com/three@0.143.0/build/three.module.js",
 					"three/examples/": "https://unpkg.com/three@0.143.0/examples/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.2/build/index.module.js"
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.3/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -47,10 +47,8 @@
 			import { TeapotGeometry } from 'three/examples/jsm/geometries/TeapotGeometry.js';
 			import { TextGeometry } from 'three/examples/jsm/geometries/TextGeometry.js';
 
-			// !!!!! TEMP
-			// import { LoopSubdivision } from 'three-subdivide';
-			import { LoopSubdivision } from '../src/LoopSubdivision.js';
-			// !!!!!
+			import { LoopSubdivision } from 'three-subdivide';
+			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 		/* !!!!! THREE DEMO DIFF ENDS HERE  !!!!! */
 
@@ -67,7 +65,7 @@
 				uvSmooth: false,
 				flatOnly: false,
 				maxTriangles: 25000,
-				lighting: true,
+				lighting: false,
 				wireframe: false
 			};
 
@@ -122,8 +120,8 @@
 				standardMaterial = new THREE.MeshStandardMaterial( materialParams );
 				wireMaterial = new THREE.MeshBasicMaterial( { color: 0xffffff, depthTest: true, wireframe: true } );
 
-				meshNormal = new THREE.Mesh( new THREE.BufferGeometry(), standardMaterial );
-				meshSmooth = new THREE.Mesh( new THREE.BufferGeometry(), standardMaterial );
+				meshNormal = new THREE.Mesh( new THREE.BufferGeometry(), basicMaterial );
+				meshSmooth = new THREE.Mesh( new THREE.BufferGeometry(), basicMaterial );
 				meshNormal.position.set( - 0.7, 0, 0 );
 				meshSmooth.position.set( 0.7, 0, 0 );
 				scene.add( meshNormal, meshSmooth );
