--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -32,7 +32,7 @@
 		 		"imports": {
 			 		"three": "https://unpkg.com/three@0.143.0/build/three.module.js",
 					"three/examples/": "https://unpkg.com/three@0.143.0/examples/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.4/build/index.module.js"
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.0.5/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -47,8 +47,8 @@
 			import { TeapotGeometry } from 'three/examples/jsm/geometries/TeapotGeometry.js';
 			import { TextGeometry } from 'three/examples/jsm/geometries/TextGeometry.js';
 
-			// import { LoopSubdivision } from 'three-subdivide';
-			import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			import { LoopSubdivision } from 'three-subdivide';
+			// import { LoopSubdivision } from '../src/LoopSubdivision.js';
 
 		/* !!!!! THREE DEMO DIFF ENDS HERE  !!!!! */
 
