--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -47,8 +47,7 @@
 			import { TeapotGeometry } from 'three/examples/jsm/geometries/TeapotGeometry.js';
 			import { TextGeometry } from 'three/examples/jsm/geometries/TextGeometry.js';
 
-			// import { LoopSubdivision } from 'three-subdivide';
-			import { LoopSubdivision } from '../src/LoopSubdivision.js';
+			import { LoopSubdivision } from 'three-subdivide';
 
 		/* !!!!! THREE DEMO DIFF ENDS HERE  !!!!! */
 
