--- a/example/LoopSubdivision.html
+++ b/example/LoopSubdivision.html
@@ -13,7 +13,7 @@
 			See external <a href="https://github.com/stevinz/three-subdivide" target="_blank" rel="noopener">three-subdivide</a> for more information on subdivision surfaces.
 		</div>
 
-		<!-- !!!!! THREE DEMO DIFF STARTS HERE !!!!! -->
+<!-- !!!!! THREE-EXAMPLE DIFF STARTS HERE !!!!! -->
 
 		<a href="https://github.com/stevinz/three-subdivide" class="github-corner" aria-label="View source on GitHub">
 			<svg width="80" height="80" viewBox="0 0 250 250" style="fill:#08f; color:#222; position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);" aria-hidden="true">
@@ -30,14 +30,15 @@
  		<script type='importmap'>
 	 		{
 		 		"imports": {
-			 		"three": "https://unpkg.com/three@0.143.0/build/three.module.js",
-					"three/addons/": "https://unpkg.com/three@0.143.0/examples/jsm/",
-					"three-subdivide": "../src/LoopSubdivision.js"
+			 		"three": "https://unpkg.com/three@0.145.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.145.0/examples/jsm/",
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.1/build/index.module.js"
 		 		}
 	 		}
  		</script>
 
-		<!-- IMPORT: "three-subdivide": "https://unpkg.com/three-subdivide@1.1.0/build/index.module.js" -->
+		<!-- IMPORT CDN: 	"three-subdivide": "https://unpkg.com/three-subdivide@1.1.1/build/index.module.js" -->
+		<!-- IMPORT LOCAL:	"three-subdivide": "../src/LoopSubdivision.js" -->
 
 		<script type="module">
 
@@ -51,7 +52,7 @@
 
 			import { LoopSubdivision } from 'three-subdivide';
 
-		/* !!!!! THREE DEMO DIFF ENDS HERE  !!!!! */
+/* !!!!! THREE-EXAMPLE DIFF ENDS HERE  !!!!! */
 
 			let renderer, scene, camera;
 			let texture, topTexture, botTexture;
@@ -61,6 +62,7 @@
 			let basicMaterial, standardMaterial, wireMaterial;
 			let topBasicMaterial, topStandardMaterial;
 			let botBasicMaterial, botStandardMaterial;
+
 			let boxBasicMaterial, boxStandardMaterial;
 			let cylinderBasicMaterial, cylinderStandardMaterial;
 
@@ -138,8 +140,8 @@
 				botBasicMaterial = new THREE.MeshBasicMaterial( materialParams );
 				botStandardMaterial = new THREE.MeshStandardMaterial( materialParams );
 
-				boxBasicMaterial = [ basicMaterial, basicMaterial, basicMaterial, basicMaterial, basicMaterial, basicMaterial ];
-				boxStandardMaterial = [ standardMaterial, standardMaterial, standardMaterial, standardMaterial, topStandardMaterial, botStandardMaterial ];
+				boxBasicMaterial = [ basicMaterial, basicMaterial, topBasicMaterial, botBasicMaterial, basicMaterial, basicMaterial ];
+				boxStandardMaterial = [ standardMaterial, standardMaterial, topStandardMaterial, botStandardMaterial, standardMaterial, standardMaterial ];
 				cylinderBasicMaterial = [ basicMaterial, topBasicMaterial, botBasicMaterial ];
 				cylinderStandardMaterial = [ standardMaterial, topStandardMaterial, botStandardMaterial ];
 
@@ -333,8 +335,6 @@
 
 				updateView();
 
-				render();
-
 			}
 
 			function updateView() {
@@ -346,6 +346,7 @@
 						meshNormal.material = meshSmooth.material = ( params.lighting ) ? boxStandardMaterial : boxBasicMaterial;
 						break;
 
+					case 'cone':
 					case 'cylinder':
 
 						meshNormal.material = meshSmooth.material = ( params.lighting ) ? cylinderStandardMaterial : cylinderBasicMaterial;
