--- a/example/MorphTargets.html
+++ b/example/MorphTargets.html
@@ -38,9 +38,9 @@
  		<script type='importmap'>
 	 		{
 		 		"imports": {
-			 		"three": "https://unpkg.com/three@0.143.0/build/three.module.js",
-					"three/examples/": "https://unpkg.com/three@0.143.0/examples/",
-					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.0/build/index.module.js"
+			 		"three": "https://unpkg.com/three@0.145.0/build/three.module.js",
+					"three/addons/": "https://unpkg.com/three@0.145.0/examples/jsm/",
+					"three-subdivide": "https://unpkg.com/three-subdivide@1.1.1/build/index.module.js"
 		 		}
 	 		}
  		</script>
@@ -49,7 +49,7 @@
 
 			import * as THREE from 'three';
 
-			import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
+			import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
 
 			import { LoopSubdivision } from 'three-subdivide';
 
